--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.8.0"
+
     repositories {
         google()
     }
     dependencies {
+
+
         classpath 'com.google.gms:google-services:4.4.0'
-        def nav_version = "2.7.3"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        def nav_version = "2.5.3"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
     }
 }
 plugins {
-id 'com.android.application' version '8.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version"  apply false
+    id 'com.android.library' version '7.3.1' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 
+
+}
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
