--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version "$kotlin_version"  apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
-
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 
 }
 task clean(type: Delete) {
