--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth-ktx:22.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //firebase
+    implementation 'com.google.firebase:firebase-auth-ktx:22.1.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
+    implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
 
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
@@ -93,6 +100,18 @@ dependencies {
 //sdp&ssp
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
+    // gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+
+    def okhttp3Version = '4.5.0'
+    def retrofitVersion = '2.9.0'
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3Version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+
 
 }
 kapt {
